--- a/my-first/plugins/hello/hello-component.yaml
+++ b/my-first/plugins/hello/hello-component.yaml
@@ -2,10 +2,14 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: hello
-  description: A demo plugin for Backstage
+  description: A demo plugin for Backstage, showcasing plugin functionality
   tags:
     - plugin
+    - demo
     - example
+  annotations:
+    backstage.io/managed-by-location: "url:http://localhost:8080/hello-component.yaml"
+    backstage.io/managed-by-origin-location: "url:http://localhost:8080/hello-component.yaml"
 spec:
   type: library
   lifecycle: experimental
